--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
+  letter-spacing: .1em;
 }
