--- a/src/components/App.css
+++ b/src/components/App.css
@@ -33,40 +33,48 @@ h1 {
 
 .seat {
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   cursor: pointer;
-  animation: plop .2s;
-  animation-fill-mode: backwards;
   position: relative;
   padding: 0;
-  border: none;
+  border: 1px solid white;
   background: transparent;
+}
+
+.seats-group-active .seat:nth-child(-n+75) {
+  background: #eee;
 }
 
 .seat-color {
   display: block;
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   box-sizing: border-box;
   position: absolute;
-  margin-top: -10px;
-  margin-left: -10px;
+  margin-top: -5px;
+  margin-left: -5px;
   top: 50%;
   left: 50%;
   border-radius: 10%;
+  animation: plop .2s;
+  animation-fill-mode: backwards;
 }
 
 .seat.hovered .seat-color {
-  transform: scale(0.7);
+  opacity: 0.5;
+  /*transform: scale(0.7);*/
 }
 
 .seat:focus {
   outline: none;
 }
 
-.seat:disabled {
+.seat.disabled {
   cursor: default;
+}
+
+.seat.disabled .seat-color {
   animation: none;
 }
 
@@ -92,6 +100,7 @@ h1 {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: .25em 0;
+  min-width: 182px;
 }
 
 .party.hovered,
@@ -104,29 +113,27 @@ h1 {
 
 .party-color {
   display: inline-block;
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   vertical-align: middle;
   margin: -2px 10px 0;
   border-radius: 10%;
   position: relative;
 }
 
-.party.hovered .party-color:after,
 .party:hover .party-color:after {
   content: "+";
   display: block;
-  width: 15px;
+  width: 10px;
   position: absolute;
   left: 0;
   top: 0;
   color: #fff;
   text-align: center;
-  line-height: 15.5px;
-  text-indent: 2px;
+  line-height: 10px;
+  text-indent: 1.5px;
 }
 
-.party-group-active .party.hovered .party-color:after,
 .party-group-active .party:hover .party-color:after {
   content: "×";
 }
@@ -146,7 +153,20 @@ h1 {
   margin-top: .5em;
   border-top: 1px solid #ddd;
   font-weight: bold;
-  color: #666;
+  color: #000;
+}
+
+.party-total-ratio {
+  font-weight: normal;
+  font-size: 0.8em;
+  opacity: 0.5;
+}
+
+.party-total-label {
+  display: block;
+  font-size: 0.667em;
+  opacity: 0.2;
+  font-weight: normal;
 }
 
 @keyframes plop {
