--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,7 +9,7 @@ h1 {
 
 .Header {
   max-width: 700px;
-  margin: 0 auto;
+  margin: 20px auto;
   font-size: 1.25em;
   line-height: 1.5em;
   letter-spacing: 0em;
@@ -147,7 +147,7 @@ img {
   width: 100%;
   text-align: center;
   font-size: 1.5em;
-  padding-top: .5em;
+  padding: .5em 0;
   margin-top: .5em;
   border-top: 1px solid #ddd;
   font-weight: bold;
