--- a/src/components/Finder.css
+++ b/src/components/Finder.css
@@ -1,22 +1,44 @@
-.Finder .coalition td {
-  border-bottom: 1px solid #eee;
-  padding: 10px;
-  cursor: pointer;
+.Finder {
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+  margin: 10px;
+}
+
+.Finder ul {
+  padding: 0;
+  margin: 0;
 }
 
 .Finder .coalition {
-  opacity: 0.7;
-
+  border: 1px solid #eee;
+  padding: 10px;
+  margin: 10px 0;
+  cursor: pointer;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  border-radius: 3px;
+  max-width: 640px;
+  margin: 30px auto;
+  justify-content: space-between;
+  font-size: 0.8em;
 }
+
 .Finder .coalition:hover {
-  opacity: 1;
+  border-top: 1px solid #eee;
   box-shadow: 0 10px 10px #fafafa;
+}
+
+.Finder .coalition-parties {
+  width: 100%;
 }
 
 .Finder .party {
   display: inline-block;
   width: auto;
   min-width: 0;
+  margin: 10px 0;
 }
 
 .Finder .party:hover {
@@ -24,4 +46,35 @@
 }
 .Finder .party:hover .party-color:after {
   display: none;
+}
+
+.Finder .party-total {
+  border: none;
+  border-left: 1px solid #ddd;
+  width: 200px;
+  flex-shrink: 0;
+}
+
+.Finder p {
+  max-width: 640px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.Finder button {
+  display: block;
+  line-height: 1em;
+  padding: .25em 0;
+  min-width: 182px;
+  font-size: 1.25em;
+  background: #fff;
+  margin: 0 auto;
+  border: 1px solid #ddd;
+  padding: 10px 20px;
+  border-radius: 3px;
+}
+
+.Finder button:hover {
+  cursor: pointer;
+  box-shadow: 0 10px 10px #fafafa;
 }
